Implement Login, userContext, searchContext and authService
